# QUICMIX

./: Cargo.toml  DEPLOY_BENCHMARK.md  DESIGN.md  E2E.md  PLUGGABILITY.md  README.md  REAL_MIXNET.md  REAL_RESULTS.md  REAL_TESTS.md  RIPOUT.md  TODO_REAL.md
crates/quicmix/: Cargo.toml
crates/quicmix-eval/: Cargo.toml
crates/quicmix-eval/examples/: bench.rs  multipath.rs  proxy.rs  rotate.rs  selftest.rs
crates/quicmix-eval/src/: emulator.rs  lib.rs  metrics.rs  proxy.rs  striped.rs
crates/quicmix-eval/tests/: failure_modes.rs  substrate.rs
crates/quicmix-node/: Cargo.toml
crates/quicmix-node/src/: main.rs
crates/quicmix/src/: autopilot.rs  directory.rs  front.rs  lib.rs  metrics.rs  metrics_ws.rs  node.rs  oracle.rs  proxy.rs  relay.rs  rotation.rs  sched.rs  stream_bridge.rs  striped.rs  substrate.rs  tor.rs
crates/quicmix/tests/: failure_modes.rs  sidecar.rs
demo/quicmix-bounce/: Cargo.toml
demo/quicmix-bridge/: Cargo.toml
docs/: architecture.md  index.html  results.md  roadmap.md  testing.md
quicmix-bounce/: Cargo.toml  README.md
quicmix-bounce/src/: main.rs
quicmix-bridge/: Cargo.toml
quicmix-bridge/src/: main.rs
quicmix-hopr/: Cargo.toml
quicmix-hopr/src/: lib.rs
quicmix-katzenpost/: Cargo.toml
quicmix-katzenpost/src/: lib.rs
quicmix-nym/: Cargo.toml
quicmix-nym/src/: lib.rs
quicmix-tor/: Cargo.toml
quicmix-tor/src/: lib.rs
realprobe/: Cargo.toml
realprobe/src/: main.rs
scripts/: real-katzenpost.sh  real-nym.sh  real-tor.sh  run-all-real.sh
src/: client.rs  directory.rs  emulator.rs  ingress.rs  lib.rs  metrics.rs  node.rs  oracle.rs  proxy.rs  relay.rs  rotation.rs  substrate.rs  tor.rs
substrates/quicmix-hopr/: Cargo.toml
substrates/quicmix-hopr/src/: lib.rs
substrates/quicmix-katzenpost/: Cargo.toml
substrates/quicmix-katzenpost/src/: lib.rs
substrates/quicmix-nym/: Cargo.toml
substrates/quicmix-tor/: Cargo.toml
substrates/quicmix-tor/src/: lib.rs
torprobe/: Cargo.toml
torprobe/src/: main.rs
