[workspace]
resolver = "2"
members = [
    "crates/quicmix",
    "crates/quicmix-node",
    "crates/quicmix-eval",
    "substrates/quicmix-hopr",
    "substrates/quicmix-katzenpost",
]
# quicmix-nym and quicmix-tor are deliberately NOT workspace members. nym-sdk
# (via sqlx-sqlite) and arti-client (via rusqlite) each pull a *different*
# `libsqlite3-sys`, and both `links = "sqlite3"`. Cargo forbids two packages
# linking the same native library in a single dependency graph, so these two can
# never coexist in one Cargo.lock. They stay standalone (own lockfile) and are
# built by path, e.g. `cargo build -p quicmix-nym --manifest-path substrates/quicmix-nym/Cargo.toml`.
exclude = [
    "substrates/quicmix-nym",
    "substrates/quicmix-tor",
]
# Bare `cargo build` builds the core lib + the deployed `quicmix` composition binary
# (which links the sqlite-free substrates by default). The eval harness and the heavier
# probe bins stay opt-in via `-p <crate>` so the everyday core workflow stays fast.
default-members = ["crates/quicmix", "crates/quicmix-node"]

# Shared dependency versions live here so the security/transport-critical crates
# (quinn, rustls, tokio, async-trait, …) can never drift between members. Members
# reference these with `{ workspace = true, features = [...] }`; features are
# additive, so each crate still selects exactly the features it needs.
[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = { version = "1" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false }
url = "2"
