[workspace]
resolver = "2"
members = [
    "crates/quicmix",
    "crates/quicmix-node",
    "crates/quicmix-eval",
    "substrates/quicmix-hopr",
    "substrates/quicmix-katzenpost",
    "substrates/quicmix-tor",
]
# quicmix-tor is now a normal member: it uses the **native C Tor daemon** over
# SOCKS5 (no arti, no rusqlite, no libsqlite3-sys), so the old native-lib link
# conflict is gone for Tor.
#
# quicmix-nym: the arti removal also clears nym's path back in — with arti gone,
# nym-sdk's `libsqlite3-sys` (via sqlx-sqlite) is the *only* sqlite in the graph, so
# there is no longer a duplicate-`links` conflict (verified: `cargo tree` resolves a
# single libsqlite3-sys v0.30.1). It stays in `exclude` only until its full nym-sdk
# build is confirmed green; rejoining it is then a one-line move into `members`.
exclude = [
    "substrates/quicmix-nym",
]
# Bare `cargo build` builds the core lib + the deployed `quicmix` composition binary
# (which links the sqlite-free substrates by default). The eval harness and the heavier
# probe bins stay opt-in via `-p <crate>` so the everyday core workflow stays fast.
default-members = ["crates/quicmix", "crates/quicmix-node"]

# Shared dependency versions live here so the security/transport-critical crates
# (quinn, rustls, tokio, async-trait, …) can never drift between members. Members
# reference these with `{ workspace = true, features = [...] }`; features are
# additive, so each crate still selects exactly the features it needs.
[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = { version = "1" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false }
url = "2"
