[workspace]
resolver = "2"
members = [
    "crates/quicmix",
    "crates/quicmix-node",
    "crates/quicmix-eval",
    "substrates/quicmix-hopr",
    "substrates/quicmix-katzenpost",
    "substrates/quicmix-tor",
    "substrates/quicmix-nym",
]
# All substrates are now first-class workspace members. Removing arti (quicmix-tor
# moved to the native C Tor daemon over SOCKS5) eliminated the duplicate
# `links = "sqlite3"` conflict: nym-sdk's `libsqlite3-sys` (via sqlx-sqlite) is now
# the *only* sqlite in the graph (verified: a single libsqlite3-sys v0.30.1 resolves,
# and the full nym-sdk + quicmix-nym build is green). Tor pulls no sqlite at all.
exclude = []
# Bare `cargo build` builds the core lib + the deployed `quicmix` composition binary
# (which links the sqlite-free substrates by default). The eval harness and the heavier
# probe bins stay opt-in via `-p <crate>` so the everyday core workflow stays fast.
default-members = ["crates/quicmix", "crates/quicmix-node"]

# Shared dependency versions live here so the security/transport-critical crates
# (quinn, rustls, tokio, async-trait, …) can never drift between members. Members
# reference these with `{ workspace = true, features = [...] }`; features are
# additive, so each crate still selects exactly the features it needs.
[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = { version = "1" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false }
url = "2"
