[package]
name = "quicmix-bounce"
version = "0.1.0"
edition = "2021"

# Bounce iframe loader for the live-demo globe. The demo wants to *show* the page it just
# "fetched over the mixnet" inside an iframe, but most sites send `X-Frame-Options` /
# `Content-Security-Policy: frame-ancestors` that forbid embedding. This tiny service runs on
# the gateway droplet (so the fetch egresses at the droplet's ip, same as the quicmix gateway),
# pulls the page server-side, and re-serves it WITHOUT the frame-blocking headers — while pinning
# a `frame-ancestors` CSP so only the demo origin can embed it (not a general-purpose frame-buster).
# Isolated crate (no path-dep on core); run behind Caddy for auto-TLS like quicmix-bridge.

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
url = "2"
regex = "1"
once_cell = "1"
