[package]
name = "quicmix-tor"
version = "0.1.0"
edition = "2021"

# Real Tor stream substrate: bootstraps arti and exposes a quicmix::MixTransport
# by framing datagrams over a Tor stream (HoL-bound, by nature of Tor). Isolated
# crate (arti is heavy).

[dependencies]
quicmix = { path = ".." }
arti-client = { version = "0.43", default-features = false, features = ["tokio", "rustls", "compression"] }
tor-rtcompat = "0.43"
async-trait = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
