[package]
name = "realprobe"
version = "0.1.0"
edition = "2021"

# Isolated from the quicmix crate on purpose: nym-sdk is a very large dependency
# tree and only runs against a live network. Keeping it separate means the core
# quicmix build/tests never depend on it.

[dependencies]
nym-sdk = "1.21"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3.32"
