[package]
name = "torprobe"
version = "0.1.0"
edition = "2021"

# Real Tor probe via arti (the Rust Tor client). Isolated crate — the heavy arti
# tree never touches the core quicmix build. Implements quicmix::tor::StreamSubstrate
# against a live arti TorClient, then measures a real circuit.

[dependencies]
arti-client = { version = "0.43", default-features = false, features = ["tokio", "rustls", "compression"] }
tor-rtcompat = "0.43"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
quicmix = { path = ".." }
