[package]
name = "quicmix-hopr"
version = "0.1.0"
edition = "2021"

# Real HOPR substrate: implements quicmix::MixTransport over a running hoprd
# node's v4 Session API (a udp tunnel). No Rust HOPR client crate exists upstream,
# so this talks the documented REST + session protocol directly. Isolated crate.

[dependencies]
quicmix = { path = "../../crates/quicmix" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }

[dev-dependencies]
# Raw-TCP mock hoprd for the HTTP-status → typed-error failure tests (#9): a real
# server returning real 401/500/hang, exercising the real reqwest mapping path.
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
