[package]
name = "quicmix-tor"
version = "0.1.0"
edition = "2021"

# Real Tor stream substrate over the **native C Tor daemon** (no arti).
#
# quicmix datagrams are framed over a SOCKS5 stream through Tor to a gateway's
# stream-bridge. The SOCKS5 client, native-`tor` supervisor (`TorDaemon`), and
# framing all live in `quicmix::tor`; this crate is a thin MixTransport wrapper +
# a self-managing sidecar binary. SOCKS5 is plain TCP, so there is NO arti and NO
# libsqlite3-sys here — the old sqlite-vs-nym link conflict is gone for Tor.

[dependencies]
quicmix = { path = "../../crates/quicmix" }
async-trait = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process"] }

# Substrate sidecar: launch+supervise native Tor and expose a local UDP front.
[[bin]]
name = "tor_sidecar"
path = "src/bin/tor_sidecar.rs"

# Standalone probe of a real Tor circuit (native daemon, no arti).
[[bin]]
name = "tor_probe"
path = "src/bin/tor_probe.rs"
